@@ -51,7 +51,7 @@ class CloneWizard  implements ChangeListener {
     private WizardDescriptor wizardDescriptor;
     private final String forPath;
     private final PasswordAuthentication pa;
-    static final List<String> ALL_BRANCHES = new ArrayList(0);
+    static final List<String> ALL_BRANCHES = new ArrayList<>();
 
     public CloneWizard (PasswordAuthentication pa, String forPath) { 
         this.forPath = forPath;
@@ -203,7 +203,7 @@ class CloneWizard  implements ChangeListener {
                 if (c instanceof JComponent) { // assume Swing components
                     JComponent jc = (JComponent) c;
                     // Sets step number of a component
-                    jc.putClientProperty(WizardDescriptor.PROP_CONTENT_SELECTED_INDEX, new Integer(i)); // NOI18N
+                    jc.putClientProperty(WizardDescriptor.PROP_CONTENT_SELECTED_INDEX, Integer.valueOf(i)); // NOI18N
                     // Sets steps names for a panel
                     jc.putClientProperty(WizardDescriptor.PROP_CONTENT_DATA, steps); // NOI18N
                     // Turn on subtitle creation on each step
